--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="favicon.ico" />
-    <title>徕卡相机水印生成器 — 宁娇网络</title>
+    <title>徕卡相机水印生成器</title>
     <script
       defer="defer"
       src="chunk-vendors.3c0bade8.js"
